@@ -30,7 +30,7 @@ VM_ARGS=$VM_ARGS" -XX:+DoEscapeAnalysis -XX:+UseFastAccessorMethods -XX:+Optimiz
 #
 architecture=`uname -m`
 if [ $architecture = 'x86_64' ]; then
-  VM_ARGS=$VM_ARGS" -Xms4g -Xmx4g -XX:+UseCompressedOops -XX:PermSize=256m -XX:MaxPermSize=256m -Xss32m "
+  VM_ARGS=$VM_ARGS" -Xms4g -Xmx4g -XX:+UseCompressedOops  -Xss32m "
 else
   VM_ARGS=$VM_ARGS" -Xms2g -Xmx2g "
   architecture='x86_32'
